test/data/resolver/valid/aggregate_count_star.cypher
MATCH (a:Person) RETURN count(*) AS n
