test/data/resolver/invalid/list_of_nodes_projection.cypher
MATCH (a:Person) RETURN [a] AS things
